--- a/project_5/Project5.ipynb
+++ b/project_5/Project5.ipynb
@@ -5,7 +5,7 @@
    "id": "6c132ca1",
    "metadata": {},
    "source": [
-    "**Проект 5. Компьютер говорит \"Нет\"**"
+    "## Проект 5. Компьютер говорит \"Нет\""
    ]
   },
   {
@@ -13,7 +13,7 @@
    "id": "fa720fea",
    "metadata": {},
    "source": [
-    "**1. Постановка задачи и знакомство с данными**"
+    "### 1. Постановка задачи и знакомство с данными"
    ]
   },
   {
@@ -777,7 +777,7 @@
    "id": "5b1f16b7",
    "metadata": {},
    "source": [
-    "**2. Переобработка данных**"
+    "### 2. Переобработка данных"
    ]
   },
   {
@@ -3241,7 +3241,7 @@
    "id": "ad5be155",
    "metadata": {},
    "source": [
-    "**3. Обучение модели**"
+    "### 3. Обучение модели"
    ]
   },
   {
@@ -3849,7 +3849,7 @@
    "id": "94df6507",
    "metadata": {},
    "source": [
-    "**4. Формирование файла Submission**"
+    "### 4. Формирование файла Submission"
    ]
   },
   {
@@ -4005,7 +4005,7 @@
    "id": "d20a06e1",
    "metadata": {},
    "source": [
-    "**5. Общие выводы по проекту**"
+    "### 5. Общие выводы по проекту"
    ]
   },
   {
